--- a/.gitignore
+++ b/.gitignore
@@ -55,9 +55,13 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
+# Django #
 *.log
-local_settings.py
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+media
 
 
 # Flask stuff:
